@@ -18,6 +18,7 @@ import chrriis.dj.sweet.demo.examples.htmleditor.SimpleHTMLEditorExample;
 import chrriis.dj.sweet.demo.examples.htmleditor.TinyMCEExample;
 import chrriis.dj.sweet.demo.examples.introduction.Sweet;
 import chrriis.dj.sweet.demo.examples.syntaxhighlighter.SimpleSyntaxHighlighterExample;
+import chrriis.dj.sweet.demo.examples.vlcplayer.OptionsAndPlaylistExample;
 import chrriis.dj.sweet.demo.examples.vlcplayer.SimpleVLCPlayerExample;
 import chrriis.dj.sweet.demo.examples.webbrowser.ClasspathPages;
 import chrriis.dj.sweet.demo.examples.webbrowser.JavascriptExecution;
@@ -58,6 +59,7 @@ public class DemoExampleDefinitionLoader {
     }));
     exampleGroupList.add(new ExampleGroup("JVLCPlayer", new Example[] {
         new Example("Simple Example", SimpleVLCPlayerExample.class, "Load a movie/sound file to an embedded VLC player.", true),
+        new Example("Options and Playlist", OptionsAndPlaylistExample.class, "Load a file to VLC player, passing certain options (start time to 30 and no audio) using the playlist.", true),
     }));
     exampleGroupList.add(new ExampleGroup("JHTMLEditor", new Example[] {
         new Example("Simple Example", SimpleHTMLEditorExample.class, "Graphically edit some HTML, get and set the HTML content.", true),
